# OOP_class

./: .gitignore  README.md  setup.msi  std.h  template.cpp  template.h  uzd.cpp
versions/deque/: CMakeLists.txt  template.cpp  template.h  uzd.cpp
versions/v2.0/: CMakeLists.txt  Doxyfile  Studentai_tests.cpp  build.bat  main.cpp  program.cpp  run.bat  std.h  template.h
versions/v2.0/html/: annotated.html  annotated_dup.js  classduom__inherit__graph.dot  classduom_a08c7dda9a5b0268d3163ef204b3fb0e8_cgraph.dot  classduom_a0d2e3f82cefb20da12453e16701f8d50_icgraph.dot  classduom_a514f99ab18f752add48ad39013b81200_cgraph.dot  classhuman.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_63772b626f2709090f0bdca0f40827b4_dep.dot  dir_ad0621a1eb1d28883fef51a8253568fe.js  dir_fd408217f95d3f1da988aefb624fd514.js  files.html  functions_rela.html  globals_defs.html  globals_vars.html  graph_legend.html  hierarchy.js  index.html  inherit_graph_0.dot  main_8cpp.html  main_8cpp_a04d5281426ba715fd1fa96c751129ec4_icgraph.dot  main_8cpp_a2427d877a6ef1775532127c0ea6e9f04_icgraph.dot  main_8cpp_a8937950931bb74763cb9f816c2bf49ff_icgraph.dot  main_8cpp_a8f8de2ed5ca34dc0d86e9efb48199c80_icgraph.dot  std_8h__dep__incl.dot  structtemp-members.html  structtemp.html  structtemp.js  template_8h.html  template_8h__incl.dot  template_8h_a33b82539f8ff34ec220e6e9849b40978_cgraph.dot  template_8h_a54fea75d1ce526f609bcc66a039b6bec_cgraph.dot  template_8h_a54fea75d1ce526f609bcc66a039b6bec_icgraph.dot  template_8h_a90d1ccf9db770af30cceb80cdcbfe675_icgraph.dot  template_8h_aa0d1d02a0e9d08b638f669e4e941141c_icgraph.dot  template_8h_aab04bb3451ac1ec06268eb154d34e58c_cgraph.dot  template_8h_aab04bb3451ac1ec06268eb154d34e58c_icgraph.dot  template_8h_ada8707a6ca93c6427e5f245303a2b001_icgraph.dot  tests_8cpp.js  (+1 more)
versions/v2.0/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  classduom.tex.tmp  classduom_a06213adee0044999e6d1eee40270d1f7_icgraph.dot  classhuman.tex  classhuman__inherit__graph.dot  dir_ad0621a1eb1d28883fef51a8253568fe.tex  dir_ad0621a1eb1d28883fef51a8253568fe_dep.dot  dir_cb5e7089658397c1934729acbc4488ca.tex  dir_cb5e7089658397c1934729acbc4488ca_dep.dot  files.tex  main_8cpp.tex  main_8cpp_a25837e43bdd34f8d0acdc279064d1c66_icgraph.dot  main_8cpp_a54fea75d1ce526f609bcc66a039b6bec_cgraph.dot  main_8cpp_a54fea75d1ce526f609bcc66a039b6bec_icgraph.dot  main_8cpp_a8937950931bb74763cb9f816c2bf49ff_icgraph.dot  main_8cpp_a90d1ccf9db770af30cceb80cdcbfe675_icgraph.dot  main_8cpp_aa0d1d02a0e9d08b638f669e4e941141c_cgraph.dot  main_8cpp_aa0d1d02a0e9d08b638f669e4e941141c_icgraph.dot  std_8h__dep__incl.dot  std_8h_source.tex  structtemp.tex  (+10 more)
versions/vector(class_impl)/: CMakeLists.txt  main.cpp  run.bat  template.cpp  template.h  tests.cpp
(+461 files in other folders)
